--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>EggTart</title>
+    
+    <!-- Open graph -->
+    <!--http://ogp.me/-->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="EggTart" />
+    <meta property="og:title" content="EggTart" />
+    <meta property="og:description" content="EggTart는 광주 소프트웨어 마이스터 고등학교 학생들의 친밀감 형성을 위해 만들어진 웹 커뮤니티 사이트 입니다." />
+    <meta property="og:image" content="./images/EggTart_logo.png" />
+    <meta property="og:url" content="http://gsm.gen.hs.kr/main/main.php" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <!--iOS-->
+    <meta property="al:ios:app_name" content="EggTart" /> 
+    <!--Android-->
+    <meta property="al:android:app_name" content="EggTart" />
+    <meta property="al:web:url" content="http://gsm.gen.hs.kr/main/main.php" />
+    
+    <!-- twitter Card -->
+    <!-- https://developer.twitter.com/en -->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="Hi" />
+    <meta property="twitter:title" content="EggTart" />
+    <meta property="twitter:description" content="EggTart는 광주 소프트웨어 마이스터 고등학교 학생들의 친밀감 형성을 위해 만들어진 웹 커뮤니티 사이트 입니다." />
+    <meta property="twitter:image" content="./images/EggTart_logo" />
+    <meta property="twitter:url" content="http://gsm.gen.hs.kr/main/main.php" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="./images/EggTart_icon_invers.png" />
+    <!--브라우저 스타일 초기화-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
+    <!--Google Fonts - 나눔고딕-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet" />
+    <!--Google Material Icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
+    <link rel="stylesheet" href="./css/main.css" />
+
+    <script defer src="./js/main.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
